# ber-tlv-parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common/: common.c  common.h  defines.h  keys.h
include/: tlv_decoder.h
src/: main.c  tlv_decoder.c
